Fix styling issues when primary menu is too long and the search form moves to the second line

--- a/less/components/search-form.less
+++ b/less/components/search-form.less
@@ -65,7 +65,7 @@
 
 	.main-navigation .search-form {
 		float: right;
-		margin-top: 12px;
+		margin: 12px 0;
 	}
 
 }
